        - A number of corner case fixes of void context populate() with \[]
        - Fix corner case of forked children disconnecting the parents DBI
          handle
        - Improve identity/autoinc retrieval code in MSSQL and Sybase -
          should reduce weird side-effects especially with populate()
        - Explicitly disable DBD::ODBC batch operations (as of DBD::ODBC 1.35)
          when using freetds - the freetds driver is just too buggy to handle
          the optimized path
        - Explicitly disable DBD::ODBC dynamic_cursors when using freetds 0.83
          or later - they made enough ODBC incompatible changes making it
          impossible to support sanely
        - Explicitly disable SCOPE_IDENTITY queries and statement caching for
          DBD::Sybase compiled against freetds 0.83 or later - way too buggy
        - Fix leakage of $schema on in-memory new_related() calls
        - Fix more cases of $schema leakage in SQLT::Parser::DBIC
        - Fix leakage of $storage in ::Storage::DBI::Oracle
        - Fix pessimization of Oracle RowNum limit dialect query when no
          offset has been specified
        - Remove useless vestigial pessimization in Ordered.pm for cases 
          when the position column is part of a unique constraint
        - Fix dbicadmin to no longer ignore the documented 'config' option
        - The schema-resultsource entanglement is now much more robust
          under threads
        - t/53lean_startup.t adjusted for new 5.15.x base.pm behavior

    * Misc
        - Centralized leak-checks for all instances of DBICTest::Schema
          from within any test
        - Now passes all tests with Test::Builder 1.005
        - Codebase is now trailing-whitespace-free
        - Cleanup of complex resultset update/delete oprations - storage
          specific code moved back to ResultSet and replaced by checks
          of storage capabilities
        - Fixed carp_once only emitting one single warning per package